--- a/app.css
+++ b/app.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 div{
+    width: 100vw;
+    height: 100vh;
     background-color: blueviolet;
     font-size:20px ;
     color: white;
