--- a/app.css
+++ b/app.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 div{
-    width: 100vw;
-    height: 100vh;
+    width: 600px;
+    height: 400px;
     background-color: blueviolet;
     font-size:20px ;
     color: white;
